# omni

./: .env.example  .gitignore  README.md  pyproject.toml
core/: static_values.py
docs/: lipopulate.md  studying-repo.md
src/: enrich_from_csv.py  llm_interface.py  main.py  pipeline.py  tag_description_builder.py
src/adapters/: linkedin_scraper_adapter.py
src/core/: pipeline.py  schema.py
src/omni_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scrapers/: brightdata_scraper.py  linkedin_api_scraper.py  mock_scraper.py  proxycurl_scraper.py  scrapper_interface.py  test.py
src/services/: llm_interface.py  tag_description_builder.py
tests/: test_llm_interface.py  test_tag_description_builder.py  test_validators.py
utils/: crud.py  linkedin_scrapper_adapter.py  proxy_utils.py
